ops/service.yml
apiVersion: v1
kind: Service
metadata:
  name: evalio-frontend
  namespace: evalio
spec:
  selector:
    app: evalio-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: evalio-backend
  namespace: evalio
spec:
  selector:
    app: evalio-backend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: evalio-backend-ws
  namespace: evalio
spec:
  selector:
    app: evalio-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
