ops/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: evalio
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "5g"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - evalio.krishlabs.tech
      secretName: evalio-frontend-tls
    - hosts:
        - api.evalio.krishlabs.tech
      secretName: evalio-backend-tls
    - hosts:
        - ws.evalio.krishlabs.tech
      secretName: evalio-backend-ws-tls

  rules:
    - host: evalio.krishlabs.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evalio-frontend
                port:
                  number: 80

    - host: api.evalio.krishlabs.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evalio-backend
                port:
                  number: 3000

    - host: ws.evalio.krishlabs.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evalio-backend-ws
                port:
                  number: 8080
